# scoreView

./: CMakeLists.txt  Readme.md
src/: fileitemmodel.cpp  fileitemmodel.h  main.cpp  pdfview.cpp  pdfview.h  scorewindow.cpp  scorewindow.h  scorewindow.ui
